--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="Restart">Restart</string>
     <string name="Opties">Opties</string>
+    <string name="winnaarToast">We hebben een winnaar</string>
+    <string name="weSpelenDoorToast">We spelen door</string>
 
 </resources>
