change language up and running

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="playersTxt">Players</string>
     <string name="languageTxt">Language</string>
     <string name="highscoresTxt">Highscores</string>
+    <string name="beginTekst">GHOST</string>
 
 </resources>
