Change names works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="languageTxt">Language</string>
     <string name="highscoresTxt">Highscores</string>
     <string name="beginTekst">GHOST</string>
+    <string name="title_activity_change_players">Players</string>
 
 </resources>
