Saves latest players and recollects

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="highscoresTxt">Highscores</string>
     <string name="beginTekst">GHOST</string>
     <string name="title_activity_change_players">Players</string>
+    <string name="title_activity_high_scores">HighScores</string>
 
 </resources>
