--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,6 @@ Mischa Hondius
     <string name="beginTekst">GHOST</string>
     <string name="title_activity_change_players">Players</string>
     <string name="title_activity_high_scores">HighScores</string>
-    <string name="title_activity_first__time">Welcome to GHOST</string>
+    <string name="title_activity_first__time">Welcome to Ghost</string>
 
 </resources>
